Refactor CompletableFutures to use List.toList() and update JUnit annotations in Schedulers